// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`does not render invalid children 1`] = `
<div
  className="sidebar"
  data-background-color="black"
  data-color="rose"
>
  <div
    className="sidebar-wrapper"
  />
</div>
`;

exports[`renders a SidebarContent when one is added as a child 1`] = `
<div
  className="sidebar"
  data-background-color="black"
  data-color="rose"
>
  <div
    className="sidebar-wrapper"
  >
    <ul
      className="nav"
    />
  </div>
</div>
`;

exports[`renders a SidebarLogo when one is added as a child 1`] = `
<div
  className="sidebar"
  data-background-color="black"
  data-color="rose"
>
  <div
    className="logo"
  />
  <div
    className="sidebar-wrapper"
  />
</div>
`;

exports[`renders correctly with the default props 1`] = `
<div
  className="sidebar"
  data-background-color="black"
  data-color="rose"
>
  <div
    className="sidebar-wrapper"
  />
</div>
`;

exports[`renders with the specified backgroundColour 1`] = `
<div
  className="sidebar"
  data-background-color="black"
  data-color="rose"
>
  <div
    className="sidebar-wrapper"
  />
</div>
`;

exports[`renders with the specified backgroundColour 2`] = `
<div
  className="sidebar"
  data-background-color="red"
  data-color="rose"
>
  <div
    className="sidebar-wrapper"
  />
</div>
`;

exports[`renders with the specified backgroundColour 3`] = `
<div
  className="sidebar"
  data-background-color="white"
  data-color="rose"
>
  <div
    className="sidebar-wrapper"
  />
</div>
`;

exports[`renders with the specified dataColour 1`] = `
<div
  className="sidebar"
  data-background-color="black"
  data-color="azure"
>
  <div
    className="sidebar-wrapper"
  />
</div>
`;

exports[`renders with the specified dataColour 2`] = `
<div
  className="sidebar"
  data-background-color="black"
  data-color="danger"
>
  <div
    className="sidebar-wrapper"
  />
</div>
`;

exports[`renders with the specified dataColour 3`] = `
<div
  className="sidebar"
  data-background-color="black"
  data-color="green"
>
  <div
    className="sidebar-wrapper"
  />
</div>
`;

exports[`renders with the specified dataColour 4`] = `
<div
  className="sidebar"
  data-background-color="black"
  data-color="orange"
>
  <div
    className="sidebar-wrapper"
  />
</div>
`;

exports[`renders with the specified dataColour 5`] = `
<div
  className="sidebar"
  data-background-color="black"
  data-color="purple"
>
  <div
    className="sidebar-wrapper"
  />
</div>
`;

exports[`renders with the specified dataColour 6`] = `
<div
  className="sidebar"
  data-background-color="black"
  data-color="rose"
>
  <div
    className="sidebar-wrapper"
  />
</div>
`;
